<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:background="@android:color/white">


    <LinearLayout
        android:orientation="vertical"
        android:padding="32dp"
        android:paddingTop="100dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <!-- Icono -->
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo_skyvisit"
            android:contentDescription="@string/logo_app"
            android:layout_marginBottom="16dp" />


        <!-- Usuario -->
        <EditText
            android:id="@+id/etUsuario"
            android:hint="@string/hint_usuario"
            android:inputType="textEmailAddress"
            android:importantForAutofill="yes"
            android:minHeight="48dp"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <!-- Contraseña -->
        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/hint_contrasena"
            android:inputType="textPassword"
            android:importantForAutofill="yes"
            android:minHeight="48dp"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <!-- Botón Registrar -->
        <Button
            android:id="@+id/btnRegistrar"
            android:text="@string/btn_registrar"
            android:minHeight="48dp"
            android:layout_marginTop="8dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <!-- Botón Login -->
        <Button
            android:id="@+id/btnLogin"
            android:text="@string/btn_login"
            android:minHeight="48dp"
            android:layout_marginTop="12dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />

        <!-- Resultado -->
        <TextView
            android:id="@+id/tvResultado"
            android:text=""
            android:textColor="#444"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
