<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAFAFA"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_lugares"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLugares"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:padding="4dp"
        android:layout_marginBottom="16dp"
        android:clipToPadding="false" />

    <Button
        android:id="@+id/btnAñadirLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/añadir_lugar"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#2196F3"
        android:background="@drawable/rounded_button"
        android:maxWidth="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btnVerGaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_im_genes_guardadas"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#4CAF50"
        android:background="@drawable/rounded_button"
        android:maxWidth="300dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
